# YouTubeMusic

./: Build.py  README.md  Search.py  Speed.py  Stream.py  Test.py  cli.py  cookies.txt  pyproject.toml  requirements.txt  setup.py
YouTubeMusic/: Core.py  Models.py  Playlist.py  Search.py  Startup.py  Stream.py  Streams.py  Update.py  Utils.py  Video_Stream.py  YtSearch.py  __init__.py  cli.py  version.py
examples/: playlist_example.py  search_example.py  stream_example.py
