[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "YouTubeMusic"
version = "2026.2.28"
description = "Async YouTube Music search and stream extraction library."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "ABHISHEK THAKUR", email = "abhishekbanshiwal2005@gmail.com" }
]

keywords = [
  "youtube",
  "youtube music",
  "music",
  "yt-dlp",
  "stream",
  "async",
  "api"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Internet",
  "Intended Audience :: Developers"
]

dependencies = [
  "httpx[http2]>=0.24.0",
  "orjson>=3.9.0",
  "yt-dlp[default]"
]

[project.urls]
Homepage = "https://github.com/YouTubeMusicAPI/YouTubeMusic"
Repository = "https://github.com/YouTubeMusicAPI/YouTubeMusic"
Issues = "https://github.com/YouTubeMusicAPI/YouTubeMusic/issues"

[project.scripts]
ytmusic = "YouTubeMusic.cli:cli"
